# somu

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.env/: pyvenv.cfg
demos/: comparison.ipynb  gensim-countries.ipynb  requirements.txt  sphereplot.py  torchsom.py
rust/: Cargo.toml  pyproject.toml
rust/src/: distance.rs  lib.rs
somu/: .gitignore  Cargo.toml  __init__.py  normal.py  pyproject.toml  somu.pyi  torchsom.py
somu/src/: lib.rs  linalg.rs  utils.rs
src/: algo.rs  lib.rs  utils.rs
