[package]
name = "somu"
edition = "2021"
version = "1.1.1"
license-file = "LICENSE"
description = "A simple high-performance implementation of the Self-Organizing Map (SOM) algorithm in Rust, exposed as a Python module."
readme = "README.md"
repository = "https://github.com/ventus550/somu"

# See more keys and their definitions at https://doc.somu-lang.org/cargo/reference/manifest.html
[lib]
name = "somu"
crate-type = ["cdylib"]

[dependencies]
arrayfire = "3.8.0"
numpy = "0.23.0"
ndarray = "0.16.1"
rand = "0.8.5"
itertools = "0.14.0"

[dependencies.pyo3]
version = "0.23.3"
features = ["extension-module", "abi3-py38"]

[profile.release]
opt-level = 'z'  # Maximum optimizations
lto = 'fat'     # Link Time Optimization
panic = 'abort' # Avoid the Rust panic runtime overhead
codegen-units = 1