[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.14.0"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
ndarray-stats = "0.6.0"
num = "0.4.3"
numpy = "0.23.0"
pyo3 = "0.23.3"
rand = "0.8.5"
rayon = "1.10.0"

[profile.release]
opt-level = 3  # Maximum optimizations
lto = true     # Link Time Optimization
panic = 'abort' # Avoid the Rust panic runtime overhead
